--- a/xiaomingbot-api/pom.xml
+++ b/xiaomingbot-api/pom.xml
@@ -10,4 +10,20 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>xiaomingbot-api</artifactId>
+
+    <properties>
+        <github.global.server>github</github.global.server>
+    </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
