更新开发文档

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>xiaoming-wiki</module>
         <module>xiaoming-admin</module>
         <module>xiaomingbot-repeatbaner</module>
+        <module>plugin-example</module>
     </modules>
 
     <dependencyManagement>
