--- a/xiaoming-bot-api/pom.xml
+++ b/xiaoming-bot-api/pom.xml
@@ -9,14 +9,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.taixue.xiaoming.bot</groupId>
     <artifactId>xiaoming-bot-api</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>commons-collections</groupId>
-            <artifactId>commons-collections</artifactId>
-            <version>3.2.1</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.4</version>
         </dependency>
     </dependencies>
 </project>
