--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,15 @@
 
     <url>https://github.com/TaixueChina/xiaoming-bot</url>
 
+    <properties>
+        <simbot.version>2.0.6-BETA.2</simbot.version>
+        <xiaoming.version>1.0-TEST</xiaoming.version>
+    </properties>
+
     <groupId>com.taixue.xiaoming.bot</groupId>
     <artifactId>xiaoming-bot</artifactId>
     <packaging>pom</packaging>
-    <version>1.0</version>
+    <version>${xiaoming.version}</version>
     <modules>
         <module>api</module>
         <module>host</module>
@@ -35,8 +40,4 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-    <properties>
-        <simbot.version>2.0.6-BETA.2</simbot.version>
-    </properties>
 </project>
